<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegistrationActivity">

    <EditText
        android:id="@+id/name_reg"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="11dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView_reg"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="@+id/imageView_reg"
        app:layout_constraintTop_toBottomOf="@+id/imageView_reg"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/email_reg"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/account"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="11dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/name_reg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/name_reg"
        app:layout_constraintTop_toBottomOf="@+id/name_reg"
        app:layout_constraintVertical_bias="0.046"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_reg"
        android:layout_width="162dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_background"
        android:elevation="2dp"
        android:text="@string/register"
        android:textColorHighlight="#29AB87"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password_reg"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/password_reg"
        app:layout_constraintTop_toBottomOf="@+id/password_reg"
        app:layout_constraintVertical_bias="0.24" />

    <EditText
        android:id="@+id/password_reg"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/keylog"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="11dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/email_reg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email_reg"
        app:layout_constraintTop_toBottomOf="@+id/email_reg"
        app:layout_constraintVertical_bias="0.083"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/account_reg"
        android:layout_width="224dp"
        android:layout_height="34dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="12dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_reg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_reg"
        app:layout_constraintVertical_bias="0.927" />

    <TextView
        android:id="@+id/sign_in_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="12dp"
        android:text="@string/sign_in"
        android:textColor="#29AB87"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/account_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/account_reg"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView_reg"
        android:layout_width="358dp"
        android:layout_height="268dp"
        android:contentDescription="@string/flower_girl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041"
        app:srcCompat="@drawable/flowergirl"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/plantzone_reg"
        android:layout_width="410dp"
        android:layout_height="53dp"
        android:background="#29AB87"
        android:fontFamily="cursive"
        android:foregroundGravity="center"
        android:gravity="center|center_horizontal"
        android:includeFontPadding="true"
        android:text="@string/plant_zone"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/name_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006" />

</androidx.constraintlayout.widget.ConstraintLayout>